# kattispdf

./: LICENSE  README.md  local-install.sh  pyproject.toml  release-test.sh  release.sh
src/kattispdf/: __init__.py  cli.py  kattispdf.py
src/kattispdf_NotTete/: __init__.py  kattispdf.py
